@startuml
title Run Application - class diagram (system + environment)

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "External environment" {
  class User <<actor>>

  class "Geolocator (GPS SDK)" as GeolocatorExternal <<external>>
  class "Connectivity SDK" as ConnectivityExternal <<external>>
  class "OSM Tile Server" as OSMExternal <<external>>
  class "Flutter Secure Storage" as SecureStorageExternal <<external>>
  class "FastAPI HTTP API" as FastApiExternal <<external>>
  class "PostgreSQL + PostGIS" as DbExternal <<external>>
}

package "Flutter frontend" {
  class MapPage
  class AuthController
  class RunTrackerController
  class ProfileActionsController

  class LoginUseCase
  class RegisterUseCase
  class FinishRunUseCase
  class GetTerritoriesForBboxUseCase
  class GetLastNotificationUseCase
  class GetRunHistoryUseCase

  interface AuthRepository
  interface RunsRepository
  interface TerritoriesRepository
  interface NotificationsRepository
  interface ProfileRepository

  class AuthRepositoryImpl
  class RunsRepositoryImpl
  class TerritoriesRepositoryImpl
  class NotificationsRepositoryImpl
  class ProfileRepositoryImpl

  class AuthApi
  class RunsApi
  class TerritoriesApi
  class NotificationsApi
  class ProfileApi

  class TokenInterceptor
  class TokenStorage
  class Dio
}

package "Python backend" {
  class Settings
  class AccessToken
  class RegisterRequest
  class LoginRequest
  class RefreshRequest
  class RunFinishRequest
  class RunFinishResponse
  class RunHistoryItemOut

  class AuthRouter <<router>>
  class MeRouter <<router>>
  class RunsRouter <<router>>
  class TerritoriesRouter <<router>>
  class NotificationsRouter <<router>>
}

User --> MapPage : uses app
AuthController --> LoginUseCase
AuthController --> RegisterUseCase
RunTrackerController --> FinishRunUseCase
ProfileActionsController --> ProfileRepository
MapPage --> RunTrackerController
MapPage --> GetTerritoriesForBboxUseCase
MapPage --> GetLastNotificationUseCase

RunTrackerController --> GeolocatorExternal
RunTrackerController --> ConnectivityExternal
MapPage --> OSMExternal

LoginUseCase --> AuthRepository
RegisterUseCase --> AuthRepository
FinishRunUseCase --> RunsRepository
GetTerritoriesForBboxUseCase --> TerritoriesRepository
GetLastNotificationUseCase --> NotificationsRepository
GetRunHistoryUseCase --> RunsRepository

AuthRepositoryImpl ..|> AuthRepository
RunsRepositoryImpl ..|> RunsRepository
TerritoriesRepositoryImpl ..|> TerritoriesRepository
NotificationsRepositoryImpl ..|> NotificationsRepository
ProfileRepositoryImpl ..|> ProfileRepository

AuthRepositoryImpl --> AuthApi
RunsRepositoryImpl --> RunsApi
TerritoriesRepositoryImpl --> TerritoriesApi
NotificationsRepositoryImpl --> NotificationsApi
ProfileRepositoryImpl --> ProfileApi

AuthApi --> Dio
RunsApi --> Dio
TerritoriesApi --> Dio
NotificationsApi --> Dio
ProfileApi --> Dio

Dio --> TokenInterceptor
TokenInterceptor --> TokenStorage
TokenStorage --> SecureStorageExternal

AuthApi --> FastApiExternal
RunsApi --> FastApiExternal
TerritoriesApi --> FastApiExternal
NotificationsApi --> FastApiExternal
ProfileApi --> FastApiExternal

FastApiExternal --> AuthRouter
FastApiExternal --> MeRouter
FastApiExternal --> RunsRouter
FastApiExternal --> TerritoriesRouter
FastApiExternal --> NotificationsRouter

AuthRouter --> RegisterRequest
AuthRouter --> LoginRequest
AuthRouter --> RefreshRequest
RunsRouter --> RunFinishRequest
RunsRouter --> RunFinishResponse
RunsRouter --> RunHistoryItemOut
MeRouter --> AccessToken
AuthRouter --> AccessToken
AuthRouter --> Settings
MeRouter --> Settings
RunsRouter --> Settings
TerritoriesRouter --> Settings
NotificationsRouter --> Settings

AuthRouter --> DbExternal
MeRouter --> DbExternal
RunsRouter --> DbExternal
TerritoriesRouter --> DbExternal
NotificationsRouter --> DbExternal

@enduml
